Filtro de Empleados terminado

--- a/ProyectoFinal/Web.config
+++ b/ProyectoFinal/Web.config
@@ -9,7 +9,7 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
   <connectionStrings>
-    <add name="Empleados" connectionString="data source=DESKTOP-O50921U; initial catalog=ProyectoFinal;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />
+    <add name="Empleados" connectionString="data source=DESKTOP-ITU0H9H; initial catalog=ProyectoFinal;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
