--- a/ProyectoFinal/ProyectoFinal.csproj
+++ b/ProyectoFinal/ProyectoFinal.csproj
@@ -279,6 +279,7 @@
     <Content Include="Views\Salidas\Details.cshtml" />
     <Content Include="Views\Salidas\Edit.cshtml" />
     <Content Include="Views\Salidas\Index.cshtml" />
+    <Content Include="Views\Empleados\Inactivos.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
